--- a/Css/style.css
+++ b/Css/style.css
@@ -5,7 +5,11 @@
 
 ul{
     list-style-type: none;
+    color: black;
+    padding: 0;
 }
+a{color:black;
+text-decoration: none;}
 header{
     background-image: url(/Images/background.jpg); 
     background-size: cover;
@@ -22,6 +26,8 @@ header>nav>ul{
     grid-template-columns: 4fr 4fr 5fr 3fr;
     font-size: 2em;
     text-align: left;
+    margin-right: 2em;
+    margin-top: 30%;
 }
 .LOGO {
  height: 50%; 
