--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -1,5 +1,24 @@
 
-
+.exhibition_main{
+    display: grid;
+    grid-template-columns: auto auto auto;
+}
+.exhibition_main>div>a>img{ 
+   height: 30em;
+    width: 30em;
+    object-position: center;
+    object-fit: cover;
+    margin-right: 1em;
+}
+.exhibition_main>div>p{
+   font-size: 2em;
+text-align: center;
+background-image: url(/Images/background.jpg);
+margin-right: 1em;
+padding-bottom: 1em;
+margin-top: 0;
+padding-top: 1em;
+}
 .spaces_main>div>h3{font-weight: 900; }
 .spaces_main>div>img{
     width: 100%;
@@ -7,13 +26,29 @@
     object-fit: cover;
     object-position: center;
     margin-top: -2em;
-
+}
+.spaces_robotics_main>div>img{
+    width: 100%;
+    height: 20em;
+    object-fit: cover;
+    object-position: 10% 90%;
+    margin-top: -2em;
+} 
+.spaces_evelution_main>div>img,
+.spaces_ecology_main>div>img{
+    width: 100%;
+    height: 20em;
+    object-fit: cover;
+    object-position: 30% 70%;
+    margin-top: -2em;
 }
 .spaces_header2>h1 {text-align: center; position: absolute;
     top: 40%; bottom:50%; right: 30%;left:30%;
     font-size: 3em;
  text-transform: uppercase;
 }
+
+
 .spaces_info{
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -21,12 +56,28 @@
 .information_blocks{
     border: solid 1em;
      border-image: url(/Images/background.jpg) 20 round;
-    line-height: 5px;
+    line-height: 10px;
     margin-right: auto;
     margin-top: 3em;
-    padding: 10%;
+    padding: 3em;
 }
 .spaces_infotext{ 
-    padding: 10em;
+    padding: 5em 10em 0em 10em;
     
+}
+.spaces_images{
+ display: grid;
+ grid-template-columns: auto auto auto auto;
+ justify-content: space-around;
+ align-items: center;
+}
+.spaces_images>img{
+    height: 12em;
+    width: 12em;
+    object-fit: cover;
+    
+}
+.ecology_img{
+    ;
+ 
 }
