--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -27,14 +27,14 @@ padding-top: 1em;
     object-position: center;
     margin-top: -2em;
 }
-.spaces_robotics_main>div>img{
+.spaces_evelution_main>div>img,.spaces_robotics_main>div>img{
     width: 100%;
     height: 20em;
     object-fit: cover;
     object-position: 10% 90%;
     margin-top: -2em;
 } 
-.spaces_evelution_main>div>img,
+
 .spaces_ecology_main>div>img{
     width: 100%;
     height: 20em;
@@ -75,9 +75,4 @@ padding-top: 1em;
     height: 12em;
     width: 12em;
     object-fit: cover;
-    
-}
-.ecology_img{
-    ;
- 
 }
