--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -1,17 +1,19 @@
 
 .exhibition_main{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    gap: 2em;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
     text-align: center;
-    justify-content: space-around;
 }
 .exhibition_main>div>a>img{ 
+   width: 100%;
    height: 30em;
-    width: 30em;
     object-position: center;
     object-fit: cover;
 
+}
+.exhibition_space{
+flex: 1 0 500px;    
 }
 .exhibition_main>div>p{
    font-size: 2em;
