--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -4,15 +4,20 @@
     flex-wrap: wrap;
     gap: 20px;
     text-align: center;
+    margin-left:10px;
+    margin-right: 10px;
+    margin-top: 10px;
 }
 .exhibition_main>div>a>img{ 
    width: 100%;
-   height: 30em;
-    object-position: center;
+   height: 20em;
+    object-position: 30%;
     object-fit: cover;
-
 }
-.exhibition_space{
+.exhibition_space_cosmo>a>img{
+    object-position: bottom;
+}
+.exhibition_space,.exhibition_space_cosmo{
 flex: 1 0 500px;    
 }
 .exhibition_main>div>p{
@@ -78,4 +83,29 @@ padding-top: 1em;
     height: 12em;
     width: 12em;
     object-fit: cover;
+}
+
+@media (min-width: 1580px) {
+        
+    .exhibition_main>div>a>img{ 
+        width: 100%;
+        height: 30em;
+         object-position: top;
+         object-fit: cover;}
+         .exhibition_space{
+            flex: 1 0 600px;    
+            }
+    
+}
+    @media (min-width: 1829px) {
+    
+        .exhibition_main>div>a>img{ 
+            width: 100%;
+            height: 40em;
+             object-position: top;
+             object-fit: cover;}
+
+             .exhibition_space{
+                flex: 1 0 600px;    
+                }
 }
