--- a/Css/style.css
+++ b/Css/style.css
@@ -51,7 +51,7 @@ footer{
 
 }
 footer>div>h4{
-    font-style: italic; font-weight:100;
+    font-style: italic; text-align: center;
 }
 footer>div>h3{
     font-weight: 900; margin-bottom: 0%;
