--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -50,8 +50,7 @@ padding-top: 1em;
     object-position: 30% 70%;
     margin-top: -2em;
 }
-.spaces_header2>h1 {text-align: center; position: absolute;
-    top: 40%; bottom:50%; right: 30%;left:30%;
+.spaces_header2>h1 {text-align: center; margin-top: -10%;
     font-size: 3em;
  text-transform: uppercase;
 }
