--- a/Css/style.css
+++ b/Css/style.css
@@ -30,19 +30,22 @@ header{
     justify-content: space-between;
     
 }
-
 header>nav>ul{
-    display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    ;gap: 20px;
+}
+header>nav{
+    display: grid;
+    grid-template-columns: auto auto auto;
     font-size: 2em;
    gap: 30px;
-   margin-right: 50px;
-   
-   
+   margin-right: 5px;
 }
+
 .LOGO {
  max-height: 150px; 
- display: flex;
+
 }
 footer{
     display: grid;
@@ -61,14 +64,42 @@ footer>div{
     grid-template-rows: auto auto auto auto auto auto auto;
     line-height: 0.2em;
 }
-
-#menu_checkbox,.hide_list{
-  background-color: yellow; 
+.hide_list {
+    display: flex;
+    flex-direction: column;
 }
-#menu-checkbox:checked~.hide_list>div,.hide_list{ background-color: red;}  
+.hamburger_list{background-color: yellow}
+#menu_checkbox,.hide_list{display: ;
+}
+#menu-checkbox:checked~.hamburger_list{ background-color: red;}  
 #menu-checkbox:checked~.hide_list{ background-color: blue;}  
 footer{
     background-image: url(/Images/footer.jpg);
     height: fit-content;
 }
-#menu-checkbox:checked~.hide_list{font-size: 5em;}
+
+
+@media (max-width: 1000px) {
+
+    header>nav{
+        font-size: 1.8em;
+       gap: 20px;
+       margin-right: 5px;
+    }
+    .LOGO {
+        max-height: 110px; 
+        display: flex;
+       }
+}
+
+
+@media (max-width: 820px) {
+    footer{display: none;}
+
+    .menu_top{
+    display:none    
+}
+}
+
+
+
