--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -23,9 +23,13 @@ flex: 1 0 500px;
 .exhibition_main>div>p{
    font-size: 2em;
 background-image: url(/Images/background.jpg);
+background-image: url(/Images/background.jpg);
+background-position: 90% 20%;
+background-repeat: no-repeat;
 padding-bottom: 1em;
 margin-top: 0;
 padding-top: 1em;
+text-align: center;
 }
 .spaces_main>div>h3{font-weight: 900; }
 .spaces_main>div>img{
