--- a/Css/style.css
+++ b/Css/style.css
@@ -22,35 +22,37 @@ header{
     background-image: url(/Images/background.jpg); 
     background-size: cover;
     background-repeat: no-repeat;
-    max-height: 15em;
-    background-position-y: center;
+    max-height: 200px;
+    background-position-y: 40%;
     display: flex;
     flex-wrap: wrap;
-    border-bottom:solid rgb(244, 255, 165);
+    border-bottom:solid white;
     justify-content: space-between;
     
 }
-header>nav>ul{
-    display: grid;
-    grid-template-columns: auto auto auto;
+header{
+    display: flex;
+    flex-direction: row
     ;gap: 20px;
-}
-header>nav{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    font-size: 2em;
-   gap: 30px;
-   margin-right: 5px;
-}
 
+}
+.header_menu>nav>ul{
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 40px;
+    font-size: 2em;
+
+}
 .LOGO {
  max-height: 150px; 
 
 }
 footer{
+    background-image: url(/Images/footer.jpg);
     display: grid;
     grid-template-columns: auto auto auto auto;
     justify-content: space-around;
+    margin-top: 3em;
 
 }
 footer>div>h4{
@@ -64,42 +66,7 @@ footer>div{
     grid-template-rows: auto auto auto auto auto auto auto;
     line-height: 0.2em;
 }
-.hide_list {
-    display: flex;
-    flex-direction: column;
-}
-.hamburger_list{background-color: yellow}
-#menu_checkbox,.hide_list{display: ;
-}
-#menu-checkbox:checked~.hamburger_list{ background-color: red;}  
-#menu-checkbox:checked~.hide_list{ background-color: blue;}  
-footer{
-    background-image: url(/Images/footer.jpg);
-    height: fit-content;
-}
+.hide_list{display: ;}
+#menu-checkbox:checked~.hamburger_menu>ul>li{background-color: red;}
 
-
-@media (max-width: 1000px) {
-
-    header>nav{
-        font-size: 1.8em;
-       gap: 20px;
-       margin-right: 5px;
-    }
-    .LOGO {
-        max-height: 110px; 
-        display: flex;
-       }
-}
-
-
-@media (max-width: 820px) {
-    footer{display: none;}
-
-    .menu_top{
-    display:none    
-}
-}
-
-
-
+#menu-checkbox:checked~.LIST>ul{background-color: blue;}
