--- a/Css/index.css
+++ b/Css/index.css
@@ -2,6 +2,8 @@
     display: flex;
         flex-wrap: wrap;
         gap: 30px;
+        margin-left: 10px;
+        margin-right: 10px;
 }
 .Image_links>div>a>img{
     width: 100%;
@@ -22,11 +24,13 @@
         background-position: 90% 20%;
         background-repeat: no-repeat;
         font-size: 2em;
+        font-weight: 600;
         gap: 20px;
         padding-bottom: 1em;
-        margin-top: 0;
         padding-top: 1em;
         text-align: center;
+        margin-top: -4px;
+        max-width: 400px;
         
     }
 
@@ -41,6 +45,11 @@
             object-position: top;
             justify-content: center
         ;}
+        .Image_links>div>a>p{
+       
+            width: 100%;
+            min-width: 350px;}
+            
         
     }
         @media (min-width: 1829px) {
@@ -53,6 +62,13 @@
             object-fit: cover;
             object-position: top;
             justify-content: center
+            
         ;}
+        .Image_links>div>a>p{
+       
+            width: 100%;
+            min-width: 500px;
+            
+        }
         
     }
