--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -21,15 +21,15 @@
 flex: 1 0 500px;    
 }
 .exhibition_main>div>p{
-   font-size: 2em;
-background-image: url(/Images/background.jpg);
+   font-size: 2.4em;
+   font-weight: 900;
 background-image: url(/Images/background.jpg);
 background-position: 90% 20%;
 background-repeat: no-repeat;
+background-size: cover;
 padding-bottom: 1em;
 margin-top: 0;
 padding-top: 1em;
-text-align: center;
 }
 .spaces_main>div>h3{font-weight: 900; }
 .spaces_main>div>img{
@@ -44,7 +44,6 @@ text-align: center;
     height: 20em;
     object-fit: cover;
     object-position: 10% 90%;
-    margin-top: -2em;
 } 
 
 .spaces_ecology_main>div>img{
@@ -52,9 +51,10 @@ text-align: center;
     height: 20em;
     object-fit: cover;
     object-position: 30% 70%;
-    margin-top: -2em;
 }
-.spaces_header2>h1 {text-align: center; margin-top: -10%;
+.spaces_header2>h1 {
+    text-align: center; margin-top: -10%;
+    margin-bottom: 5%;
     font-size: 3em;
  text-transform: uppercase;
 }
