--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -8,6 +8,12 @@
     margin-right: 10px;
     margin-top: 10px;
 }
+.exhibition_headline{
+    text-align: center;
+    font-size: 1.7em;
+    text-transform: uppercase;
+}
+
 .exhibition_main>div>a>img{ 
    width: 100%;
    height: 20em;
@@ -18,10 +24,10 @@
    object-position: 0px 70%;
     }
 .exhibition_space,.exhibition_space_lego,.exhibition_space_eco{
-flex: 1 0 500px;    
+ 
 }
 .exhibition_main>div>p{
-   font-size: 2.4em;
+   font-size: 2em;
    font-weight: 900;
 background-image: url(/Images/background.jpg);
 background-position: 90% 20%;
@@ -37,7 +43,8 @@ padding-top: 1em;
     height: 20em;
     object-fit: cover;
     object-position: center;
-    margin-top: -2em;
+    display: flex;
+    flex-wrap: wrap;
 }
 .spaces_evelution_main>div>img,.spaces_robotics_main>div>img{
     width: 100%;
@@ -53,8 +60,9 @@ padding-top: 1em;
     object-position: 30% 70%;
 }
 .spaces_header2>h1 {
-    text-align: center; margin-top: -10%;
-    margin-bottom: 5%;
+    text-align: center; 
+    margin-top: -5%;
+    margin-bottom: 3%;
     font-size: 3em;
  text-transform: uppercase;
 }
@@ -62,9 +70,11 @@ padding-top: 1em;
 
 .spaces_info{
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: auto auto;
 }
 .information_blocks{
+    flex-wrap: wrap;
+    flex-direction: column;
     border: solid 1em;
      border-image: url(/Images/background.jpg) 20 round;
     line-height: 10px;
@@ -73,19 +83,28 @@ padding-top: 1em;
     padding: 3em;
 }
 .spaces_infotext{ 
-    padding: 5em 10em 0em 10em;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 500px;
+    background-color: red;
     
 }
 .spaces_images{
- display: grid;
- grid-template-columns: auto auto auto auto;
+display: grid;
+grid-template-columns: auto auto auto auto;
  justify-content: space-around;
  align-items: center;
+ gap:20px;   
 }
 .spaces_images>img{
-    height: 12em;
-    width: 12em;
+    display: flex;
+    flex-wrap: wrap;
+    height: 200px;
+    max-width: 200px;
     object-fit: cover;
+ flex: 1 0 100px; 
+    
 }
 
 @media (min-width: 1580px) {
