--- a/Css/index.css
+++ b/Css/index.css
@@ -59,7 +59,7 @@
 .exhibition_space,.exhibition_space_lego,.exhibition_space_eco{
 flex: 1 0 500px;    
 }
-.exhibition_main>div>p{
+.exhibition_main>div>h2{
    font-size: 2.4em;
    font-weight: 900;
 background-image: url(/Images/background.jpg);
@@ -93,7 +93,7 @@ padding-top: 1em;
        flex: 1 0 300px;
   
     }
-    .Image_links>div>a>p{
+    .Image_links>div>a>h2{
         background-image: url(/Images/background.jpg);
         background-position: 90% 20%;
         background-repeat: no-repeat;
@@ -119,7 +119,7 @@ padding-top: 1em;
             object-position: top;
             justify-content: center;
         ;}
-        .Image_links>div>a>p{
+        .Image_links>div>a>h2{
        
             width: 100%;
             min-width: 350px;}
@@ -138,7 +138,7 @@ padding-top: 1em;
             justify-content: center
             
         ;}
-        .Image_links>div>a>p{
+        .Image_links>div>a>h2{
        
             width: 100%;
             min-width: 500px;
@@ -183,7 +183,7 @@ padding-top: 1em;
                flex: 1 0 230px;
           
             }
-            .Image_links>div>a>p{
+            .Image_links>div>a>h2{
                 font-size: 1.5em;
                 gap: 10px;
                 padding-bottom: 0.5em;
@@ -200,7 +200,7 @@ padding-top: 1em;
             max-height: 300px;
             background-color: red;
     }
-    .Image_links>div>a>p{
+    .Image_links>div>a>h2{
         font-size: 1.5em;
         gap: 10px;
         padding-bottom: 0.5em;
