--- a/Css/special.css
+++ b/Css/special.css
@@ -1,10 +1,3 @@
-.event_main{
-    display: flex;
-    flex-wrap: wrap;
-    text-align: right;
-    
-
-}
 img{
     width: 100%;
     max-height: 400px;
@@ -15,6 +8,14 @@ img{
 }
 .event>p{ 
     margin-top: -2em ;
+    margin-bottom: 1em;
 font-size: 1.5em;
 color: white;
-margin-right: 50px;}
+margin-right: 50px;
+font-weight: 500;
+text-align: right;}
+
+.Event_headline{
+    text-align: center;
+    font-size: 1.7em;
+    text-transform: uppercase;}
