--- a/Css/style.css
+++ b/Css/style.css
@@ -22,28 +22,30 @@ header{
     background-image: url(/Images/background.jpg); 
     background-size: cover;
     background-repeat: no-repeat;
-    width: fit-content;
+    min-width: fit-content;
     max-height: 150px;
-    background-position-y: 40%;
+    background-position-y: 35%;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-header{
-    display: flex;
+    flex-wrap: wrap;    
     flex-direction: row
-    ;gap: 20px;
-
+    ;gap: 200px;
+    justify-content: space-around;  
+    align-items: baseline;  
+    padding-bottom: 10px;
+    
 }
-.header_menu{ 
-    margin-top: 80px;
-}
-.header_menu>nav>ul{
+.header>nav>ul{
     display: flex;
     flex-wrap: wrap;
     gap: 40px;
-    font-size: 2em;
-
+    font-size: 1.8em;
+}
+.header>nav>ul>li>a{
+    padding-right: 20px;
+}
+.header>nav>ul>li>a:hover{
+    color: rgb(67, 50, 89);
+    text-decoration: underline;
 }
 .LOGO {
  max-height: 150px; 
@@ -68,12 +70,19 @@ footer>div{
     grid-template-rows: auto auto auto auto auto auto auto;
     line-height: 0.2em;
 }
-.hide_list{display: ;}
-#menu-checkbox:checked~.hamburger_menu>ul>li{background-color: red;}
 
-#menu-checkbox:checked~.LIST>ul{background-color: blue;}
+#menu_checkbox,.menu_hamburger,.hide_list {
+    display: none;
+}
 
-
+@media (min-width:1580px) {
+    .header>nav>ul{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 40px;
+        font-size: 2em;
+    
+}}
 
 @media(max-width: 650px){
     .hide_list{display: none;}
