--- a/Css/style.css
+++ b/Css/style.css
@@ -25,10 +25,9 @@ header{
     min-width: fit-content;
     max-height: 150px;
     background-position-y: 35%;
-    display: flex;
-    flex-wrap: wrap;    
-    flex-direction: row
-    ;gap: 200px;
+    display: grid;
+    grid-template-columns: auto auto;
+
     justify-content: space-around;  
     align-items: baseline;  
     padding-bottom: 10px;
@@ -36,7 +35,7 @@ header{
 }
 .header>nav>ul{
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 40px;
     font-size: 1.8em;
 }
@@ -59,6 +58,7 @@ footer{
     margin-top: 3em;
 
 }
+
 footer>div>h4{
     font-style: italic; text-align: center;
 }
@@ -75,14 +75,22 @@ footer>div{
     display: none;
 }
 
-@media (min-width:1580px) {
+
+@media (max-width: 1170px) {
+   
+    header{
+        display: grid;
+        grid-template-columns: auto ;      
+    }
+
     .header>nav>ul{
-        display: flex;
-        flex-wrap: wrap;
-        gap: 40px;
-        font-size: 2em;
-    
-}}
+        font-size: 1.6em; margin-top: -0.2em;
+    }
+    .LOGO{
+        max-width: 400px;
+
+    }
+}
 
 @media(max-width: 650px){
     .hide_list{display: none;}
@@ -90,14 +98,18 @@ footer>div{
 
 
 .header_menu{ 
-    margin-top: -10px;
+    display: none;
 }
-.header_menu>nav>ul{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 40px;
-    font-size: 1em;
 
+header{ 
+    position: fixed;
+width:100%}
+
+#menu_checkbox,.menu_hamburger,.hide_list {
+    display: block;
 }
-header{ position: fixed;}
+.menu_hamburger{ 
+    font-size: 2em;
+}
+
 }
