--- a/Css/style.css
+++ b/Css/style.css
@@ -52,15 +52,10 @@ header{
 }
 footer{
     background-image: url(/Images/footer.jpg);
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+    display: flex;
+    flex-wrap: nowrap;
     justify-content: space-around;
     margin-top: 3em;
-
-}
-
-footer>div>h4{
-    font-style: italic; text-align: center;
 }
 footer>div>h3{
     font-weight: 900; margin-bottom: 0%;
@@ -70,6 +65,7 @@ footer>div{
     grid-template-rows: auto auto auto auto auto auto auto;
     line-height: 0.2em;
 }
+
 
 #menu_checkbox,.menu_hamburger,.hide_list {
     display: none;
@@ -95,7 +91,9 @@ footer>div{
 @media(max-width: 650px){
     .hide_list{display: none;}
     .LOGO{max-width: 300px;}
-
+footer{
+    display: none;
+}
 
 .header_menu{ 
     display: none;
