--- a/Css/style.css
+++ b/Css/style.css
@@ -18,6 +18,12 @@ ul{
 }
 a{color:black;
 text-decoration: none;}
+button{
+    background-image: url(/Images/background.jpg);
+    font-size: 1em;
+    font-weight: 300;
+    border-radius: 10px;
+}
 header{
     background-image: url(/Images/background.jpg); 
     background-size: cover;
@@ -87,7 +93,11 @@ footer>div{
 
     }
 }
-
+@media(max-width: 720px){
+    .header>nav>ul{
+        font-size: 1.4em; margin-top: -0.2em;
+    }
+}
 @media(max-width: 650px){
     .hide_list{display: none;}
     .LOGO{max-width: 300px;}
