--- a/Css/style.css
+++ b/Css/style.css
@@ -115,8 +115,12 @@ footer{
     font-size: 1.5em;
     
 }
-.menu_hamburger,.header_menu{
+.menu_hamburger{
 margin-right: 60%;
+}
+.header_menu{
+    margin-right: 40%;
+    padding: 10px;
 }
 header{ 
     position: fixed;
@@ -143,6 +147,7 @@ flex-direction: column;
     display: block;
     font-size: 1.2em;
     line-height: 1.8em;
+    flex-wrap: nowrap;
 }
 
 }
