--- a/Css/visit.css
+++ b/Css/visit.css
@@ -16,7 +16,7 @@ justify-content: center;
    padding:0em 2em;
    width: 400px;
    max-width: 450px;
-   flex: 1 0 500px
+   flex: 1 0 250px
 }
 
 .information_blocks>div>h2{
@@ -47,4 +47,8 @@ justify-content: center;
 }
 .information_blocks,.information_blocks2 {
     gap:9em;}
+}
+
+@media (max-width: 650px) {
+    
 }
