--- a/Css/index.css
+++ b/Css/index.css
@@ -3,9 +3,10 @@
     width: 100%;
     height: 500px;
     object-position: 0% 20%;
+    margin-top: 2%;
 
 }
-.hero>h1,.Visit>a>h2{
+.hero>h1{
     background-image: url(/Images/background.jpg);
     background-position: 0% 80%;
     background-size: cover;
@@ -38,39 +39,19 @@
         font-size: 1.3em;
         padding: 1em;
     }
-    
-.exhibition_main{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    text-align: center;
-    margin-left:10px;
-    margin-right: 10px;
-    margin-top: 10px;
-}
-.exhibition_main>div>a>img{ 
-   width: 100%;
-   height: 30em;
-    object-fit: cover;
-
-}
-.exhibition_space_lego>a>img,.exhibition_space_eco>a>img{
-   object-position: 0px 70%;
+    .visit{
+        background-image: url(/Images/background.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        text-align: center;
+        line-height: 0.5;
+        padding-top: 1em;
     }
-.exhibition_space,.exhibition_space_lego,.exhibition_space_eco{
-flex: 1 0 500px;    
-}
-.exhibition_main>div>h2{
-   font-size: 2.4em;
-   font-weight: 900;
-background-image: url(/Images/background.jpg);
-background-position: 90% 20%;
-background-repeat: no-repeat;
-background-size: cover;
-padding-bottom: 1em;
-margin-top: 0;
-padding-top: 1em;
-}
+    .visit>a>h2{
+        font-size: 2.3em;
+    }
+    
+
 .Image_links{
     display: flex;
         flex-wrap: wrap;
@@ -124,49 +105,7 @@ padding-top: 1em;
        
             width: 100%;
             min-width: 350px;}   
-    }
-        @media (min-width: 1829px) {
-        
-        .Image_links>div>a>img{
-            width: 100%;
-            height: 80%;
-            min-width: 500px;
-            min-height: 300px;
-            object-fit: cover;
-            object-position: top;
-            justify-content: center
-            
-        ;}
-        .Image_links>div>a>h2{
-       
-            width: 100%;
-            min-width: 500px;
-            
-        }
-        
-    }
-    @media (min-width: 1580px) {
-            
-        .exhibition_main>div>a>img{ 
-            width: 100%;
-            height: 30em;
-             object-fit: cover;}
-             .exhibition_space,.exhibition_space_lego,.exhibition_space_eco{
-             flex: 1 0 600px;    
-                }
-       
-    }
-        @media (min-width: 1829px) {
-        
-            .exhibition_main>div>a>img{ 
-                width: 100%;
-                height: 40em;
-                 object-fit: cover;}
-    
-                 .exhibition_space,.exhibition_space_lego,.exhibition_space_eco{
-                    flex: 1 0 600px;    
-                    }
-    }
+    }   
 
     @media(max-width: 770px) {
     
@@ -222,9 +161,7 @@ padding-top: 1em;
     flex: 1 0 150px;
 }
 
- .exhibition_space,.exhibition_space_lego,.exhibition_space_eco{
- flex: 1 0 450px;    
- }
+
  .hero>img,.starClub>a>img{
     object-fit: cover;
    max-width: 100%;
