--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -21,6 +21,11 @@
     object-fit: cover;
     object-position: 30% 70%;
 }
+.spaces_lego_main>div>img{  
+      width: 100%;
+    height: 500px;
+    object-fit: cover;
+    object-position: 0% 80%;}
 .spaces_header2>h1 {
     text-align: center; 
     margin-top: -15%;
@@ -155,9 +160,9 @@
     }   
     .spaces_header2>h1 {
         text-align: center; 
-        margin-top: -20%;
+        margin-top: -25%;
         margin-bottom: 10%;
-        font-size: 2.8em;
+        font-size: 2em;
      text-transform: uppercase;
     }
     .spaces_images>img{
@@ -166,15 +171,13 @@
         object-fit: cover;
         flex-wrap: wrap;  
     }
+
 }
-@media (max-width: 470px){
-    .spaces_header2>h1 {
-        text-align: center; 
-        margin-top: -40%;
-        margin-bottom: 10%;
-        font-size: 2.8em;
-     text-transform: uppercase;
-    }
+@media (max-width: 410px ) {
+    .spaces_images>img{
+        height: 70px;
+        width: 70px;}
+    
 }
 
 
