--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -25,7 +25,7 @@
       width: 100%;
     height: 500px;
     object-fit: cover;
-    object-position: 0% 80%;}
+    object-position: 50% 80% 50%;}
 .spaces_header2>h1 {
     text-align: center; 
     margin-top: -15%;
@@ -175,8 +175,8 @@
 }
 @media (max-width: 410px ) {
     .spaces_images>img{
-        height: 70px;
-        width: 70px;}
+        height: 75px;
+        width: 75px;}
     
 }
 
