--- a/Css/special.css
+++ b/Css/special.css
@@ -29,13 +29,13 @@ text-align: right;}
 
 
         .event>p{ 
-            margin-top: -2em ;
+            margin-top: -2.5em ;
             margin-bottom: 1em;
-        font-size: 1em;
+        font-size: 1.6em;
         color: white;
         margin-right: 50px;
         font-weight: 500;
-        text-align: right;}
+        text-align: left;}
         .Event_headline{
             font-size: 1em;
         padding-top: 150px;}
@@ -46,7 +46,7 @@ text-align: right;}
         .event>p{ 
             margin-top: -3em ;
             margin-bottom: 2em;
-        font-size: 0.8em;
+        font-size: 1.4em;
         color: white;
         margin-left: 5px;
         font-weight: 500;
