--- a/Css/style.css
+++ b/Css/style.css
@@ -20,9 +20,13 @@ a{color:black;
 text-decoration: none;}
 button{
     background-image: url(/Images/background.jpg);
-    font-size: 1em;
+    background-position: 40% ;
+    font-size: 1.2em;
     font-weight: 300;
     border-radius: 10px;
+    margin-top: 30px;
+    color: black;
+    padding: 5% 10%;
 }
 header{
     background-image: url(/Images/background.jpg); 
