--- a/Css/style.css
+++ b/Css/style.css
@@ -62,13 +62,17 @@ header{
 }
 footer{
     background-image: url(/Images/footer.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-around;
     margin-top: 3em;
+    font-size: 1.4em;
 }
 footer>div>h3{
-    font-weight: 900; margin-bottom: 0%;
+    font-weight: 900;
+     margin-bottom: 0%;
 }
 footer>div{
     display: grid;
@@ -112,6 +116,7 @@ footer>div>h3{
 font-size: 1em;
 padding-bottom: 30px;
 padding-top: 20px;
+font-size: 0.5em;
     
 }
 
