--- a/Css/index.css
+++ b/Css/index.css
@@ -141,6 +141,9 @@
                 padding-top: 0.5em;
              
             }
+            .hero>img{
+                margin-top: 130px;
+            }
     }
     @media (max-width: 511px) {
      
