--- a/Css/index.css
+++ b/Css/index.css
@@ -58,6 +58,7 @@
         gap: 30px;
         margin-left: 10px;
         margin-right: 10px;
+        align-items: stretch;
         
 }
 .Image_links>div>a>img{
@@ -120,7 +121,7 @@
             width: 100%;
             height: 70%;
             max-width: 400px;
-            max-height: 300px;
+            height: 300px;
             
         ;}.starClub>a>h2{
             padding-bottom: 3em;}
@@ -151,7 +152,7 @@
             width: 100%;
             height: 70%;
             max-width: 600px;
-            max-height: 300px;
+            height: 200px;
     }
     .Image_links>div>a>h2{
         font-size: 1em;
