--- a/Css/style.css
+++ b/Css/style.css
@@ -86,24 +86,32 @@ footer>div{
 }
 
 
-@media (max-width: 1170px) {
+@media (max-width: 1212px) {
    
-    header{
-        display: grid;
-        grid-template-columns: auto ;      
-    }
-
     .header>nav>ul{
-        font-size: 1.6em; margin-top: -0.2em;
+        font-size: 1.6em; 
+        margin-top: -0.2em;
+        gap: 20px;
     }
     .LOGO{
         max-width: 400px;
 
+
     }
 }
-@media(max-width: 720px){
+@media (max-width: 1005px) {
+ .header{
+    grid-template-columns: auto;
+ }
     .header>nav>ul{
-        font-size: 1.4em; margin-top: -0.2em;
+ 
+        gap: 35px;
+        padding-right: 80px;
+    }
+}
+@media(max-width: 760px){
+    .header>nav>ul{
+        font-size: 1.3em; margin-top: -0.2em;
     }
 }
 @media(max-width: 650px){
