--- a/Css/index.css
+++ b/Css/index.css
@@ -38,7 +38,7 @@
         text-align: center;
         font-family: "SourceSansPro";
         margin-top: -5em;
-        margin-bottom: 5em;
+        margin-bottom: 3em;
         font-size: 1.3em;
         padding: 1em;
     }
@@ -152,7 +152,7 @@
             .hero>img{
                 margin-top: 130px;
             }
-        
+    }
     @media (max-width: 511px) {
      
         .Image_links>div>a>img{
