--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -76,8 +76,8 @@
 }
 
 .spaces_images>img{
-    height: 200px;
-    width: 200px;
+    height: 250px;
+    width: 250px;
     object-fit: cover;
     flex-wrap: wrap;  
 }
@@ -107,11 +107,9 @@
         height: 400px;
     }   
     .spaces_header2>h1 {
-        text-align: center; 
         margin-top: -20%;
         margin-bottom: 19%;
         font-size: 2.8em;
-     text-transform: uppercase;
     }
     .spaces_images>img{
         height: 170px;
@@ -122,8 +120,8 @@
 }
 @media (max-width: 1083px){
     .spaces_images>img{
-        height: 140px;
-        width: 140px; }
+        height: 175px;
+        width: 175px; }
 
         .information_blocks{
             font-size: 0.9em;
@@ -139,9 +137,7 @@
         gap: 10px;
     
     }
-    .spaces_images>img{
-        height: 150px;
-        width: 150px; }
+
 
         .information_blocks{
             font-size: 1.2em;
@@ -162,25 +158,34 @@
         height: 400px;
     }   
     .spaces_header2>h1 {
-        text-align: center; 
         margin-top: -25%;
         margin-bottom: 10%;
         font-size: 2em;
-     text-transform: uppercase;
     }
-    .spaces_images>img{
-        height: 170px;
-        width: 170px;
-        object-fit: cover;
-        flex-wrap: wrap;  
+    .spaces_images{
+        max-width: 500px;
+        align-items: center;
     }
 
 }
-@media (max-width: 410px ) {
+@media (max-width: 415px ) {
     .spaces_images>img{
-        height: 75px;
-        width: 75px;}
+        height: 110px;
+        width: 110px;
+        
+      }
+      .spaces_images{
+        max-width: 300px;
+        align-items: center;
+    }
+
     
 }
-
+@media (max-width: 350px ){
+    .spaces_header2>h1 {
+        margin-top: -45%;
+        margin-bottom: 20%;
+        font-size: 2em;
+    }
+}
 
