--- a/Css/style.css
+++ b/Css/style.css
@@ -111,7 +111,9 @@ footer>div{
 }
 @media(max-width: 760px){
     .header>nav>ul{
-        font-size: 1.3em; margin-top: -0.2em;
+        font-size: 1.3em;
+         margin-top: -0.2em;
+         margin-left: 20px;
     }
 }
 @media(max-width: 650px){
