--- a/Css/style.css
+++ b/Css/style.css
@@ -19,6 +19,7 @@ ul{
 a{color:black;
 text-decoration: none;}
 button{
+  
     background-image: url(/Images/background.jpg);
     background-position: 40% ;
     font-size: 1.2em;
@@ -27,6 +28,7 @@ button{
     margin-top: 30px;
     color: black;
     padding: 5% 10%;
+    flex-wrap: nowrap;
 }
 header{
     background-image: url(/Images/background.jpg); 
