--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -27,7 +27,12 @@
     object-fit: cover;
     object-position: 50% 80% 50%;}
 
- 
+ .spaces_main_kids>div>img{
+    width:100%;
+    height: 500px;
+    object-fit: cover;
+    object-position: 10% 60%;
+ }
 
 .spaces_header2>h1 {
     text-align: center; 
@@ -36,7 +41,10 @@
     font-size: 3em;
  text-transform: uppercase;
 }
-
+.Headline{
+color: rgb(247, 214, 0);
+border: solid black 1px;
+}
 
 .spaces_info{
     display: flex;
@@ -77,7 +85,7 @@
     font-size: 3em;
 }
 
-.spaces_images>img{
+.spaces_images>img,.spaces_images2>img{
     height: 175px;
     width: 175px;
     object-fit: cover;
@@ -126,10 +134,20 @@
         .spaces_images{
             max-width: 500px;
         }
+        .spaces_images2{
+            max-width: 700px;
+        }
 .spaces_infotext{
     display: flex;
 }
 }
+@media (max-width: 1130px) {
+    .spaces_images2>img{ 
+       width: 150px;
+    }
+    
+}
+
 @media (max-width: 650px) {
  
 
@@ -155,7 +173,7 @@
         font-size: 1.3em;
     }
   
-    .spaces_main>div>img,.spaces_evelution_main>div>img,.spaces_robotics_main>div>img,.spaces_ecology_main>div>img{
+    .spaces_main>div>img,.spaces_evelution_main>div>img,.spaces_robotics_main>div>img,.spaces_ecology_main>div>img,.spaces_main_kids>div>img{
         width: 100%;
         height: 400px;
     }   
