--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -33,6 +33,12 @@
     object-fit: cover;
     object-position: 10% 60%;
  }
+.spaces_main_teachers>div>img{
+    width:100%;
+    height: 500px;
+    object-fit: cover;
+    object-position: 10% 20%;
+}
 
 .spaces_header2>h1 {
     text-align: center; 
@@ -173,7 +179,7 @@ border: solid black 1px;
         font-size: 1.3em;
     }
   
-    .spaces_main>div>img,.spaces_evelution_main>div>img,.spaces_robotics_main>div>img,.spaces_ecology_main>div>img,.spaces_main_kids>div>img{
+    .spaces_main>div>img,.spaces_evelution_main>div>img,.spaces_robotics_main>div>img,.spaces_ecology_main>div>img,.spaces_main_kids>div>img,.spaces_main_teachers>div>img{
         width: 100%;
         height: 400px;
     }   
