--- a/Css/spaces.css
+++ b/Css/spaces.css
@@ -39,7 +39,22 @@
     object-fit: cover;
     object-position: 10% 20%;
 }
-
+.spaces_main_FAQ{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    
+}
+.spaces_main_FAQ>div>img{
+  height: 400px;
+}
+.spaces_headerFAQ>h1{
+    text-align: center; 
+    margin-top: -35%;
+    margin-bottom: 0%;
+    font-size: 3em;
+ text-transform: uppercase;
+}
 .spaces_header2>h1 {
     text-align: center; 
     margin-top: -15%;
@@ -80,12 +95,15 @@ border: solid black 1px;
     justify-content: space-around;
     align-items: center;
 }
-.spaces_infotext>p{
+.spaces_infotext>p,.spaces_infotext>ul>li{
     flex-wrap: wrap;
     text-align: left;
     max-width: 900px;
     font-size: 1.5em;
-
+    
+}
+.spaces_infotext>ul>li{
+    line-height: 3em;
 }
 .spaces_infotext>h3{
     font-size: 3em;
