--- a/Css/index.css
+++ b/Css/index.css
@@ -90,6 +90,7 @@
         padding-top: 1em;
         text-align: center;
         margin-top: -4px;
+        margin-bottom: 5px;
         max-width: 400px;
         
     }
